# png_core

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  update_compile_commands.bat  vcpkg.json
cmake/: generate_docs.cmake
png_cli/: CMakeLists.txt
png_cli/src/: main.cpp
png_core/: CMakeLists.txt
png_core/src/: chunk_data.c  chunk_types.c  compression.c  datastream.c  decoder.c  filtering.c  pixel_format.c  tools.c  tools.h
png_core/src/include/png_core/: chunk_data.h  chunk_types.h  compression.h  datastream.h  decoder.h  filtering.h  interlacing.h  pixel_format.h  png_core.h
tests/: CMakeLists.txt  test_utils.cpp  test_utils.h
tests/png_core/: chunk_data.cpp  chunk_types.cpp  compression.cpp  filtering.cpp  pixel_format.cpp
